got input to append new rows

--- a/index.html
+++ b/index.html
@@ -28,12 +28,25 @@
     </div>
     <div>
         <h3>Employees</h3>
-        <ul id="employeeList">
+        <table>
+            <colgroup>
+                <col span="5">
+            </colgroup>
+            <tr>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>ID</th>
+                <th>Title</th>
+                <th>Annual Salary</th>
+            </tr>
+            <tbody id="employeeList">
             
-        </ul>
+            </tbody>
+        </table>
     </div>
     <div>
         <h3>Total Monthly:</h3>
+        <p id="costs"></p>
     </div>
 </body>
 </html>
