fixed delete button to work on all rows

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         </table>
     </div>
     <div>
-        <h3>Total Monthly:</h3>
-        <p id="costs"></p>
+        <h3 id="costs">Total Monthly Costs:</h3>
+        <p></p>
     </div>
 </body>
 </html>
